<resources>

    <string name="app_name">Хищные растения</string>

    <string name="plant">Растение</string>
    <string name="plant_description">Описание растения</string>
    <string name="add_plant">Добавить растение</string>
    <string name="add_random_plant">Добавить случайное растение</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="book">Справочник</string>

    <string name="my_plants">Мои растения</string>
    <string name="library">Библиотека</string>

    <string name="zhirianka">Жирянка</string>
    <string name="muholovka">Венерина мухоловка</string>
    <string name="nepentes">Непентес</string>
    <string name="rosianka">Росянка</string>
    <string name="sarracenia">Саррацения</string>
    <string name="puzirchatka">Пузырчатка</string>
    <string name="darlingtonia">Дарлингтония</string>

    <string name="zhirianka_description">Среди хищных комнатных растений жирянку по праву называют одной из наиболее популярных. Эта многолетняя насекомоядная скромница, на самом деле, способна удивить и нежностью напоминающих фиалки цветков, и необычным окрасом ярких салатовых листьев. Но все же чаще выращивают это растение не как декоративную культуру, а как экзотическую изюминку, способную внести неожиданные акценты в домашние коллекции.\n\nОсобой броскостью жирянка похвалиться не может, но производит лишь обманчиво простое впечатление и пленяет своей миловидностью, скромностью и безжалостностью. Симпатичные розетки аккуратных закругленных листьев и способность обильно цвести при хорошем уходе придают растению особое очарование. К тому же, за этим комнатным хищником совсем не сложно ухаживать.</string>
    <string name="muholovka_description">Венерина мухоловка, или Дионея — самое популярное, яркое и условно неприхотливое растение из числа плотоядных комнатных хищников. Она прославилась не только способностью питаться насекомыми. Неподражаемая красота ярко окрашенных ловушек превращает ее в экстравагантное и весьма декоративное комнатное украшение.\n\nЭкзотическая кроха требует особого подхода в уходе, да и условия для нее подобрать непросто. Солнцелюбивая и влаголюбивая, она полностью оправдывает репутацию растения не для всех. Но именно венерину мухоловку лучше выбрать для знакомства с плотоядными комнатными растениями.</string>
    <string name="nepentes_description">На нашей Земле произрастает более полумиллиона различных видов уникальных растений. К ним относится и Непентес — редкое насекомоядное растение-хищник семейства Непентовые. В естественных условиях это растение живет на стволах тропических и субтропических деревьев Азии, Индонезии и далекой Австралии.\n\nУникальность непентеса заключается в видоизмененных крупных листьях, черешки которых обвивают ветки рядом растущих кустарников и деревьев. Окончания листьев преобразованы в ловчие органы, представляющие собой удлиненные (до 50 см) пестроокрашенные кувшинчики, в каждом из которых находится жидкость, по составу очень близкая нашему желудочному соку. Насекомые, попадая в такую ловушку, соскальзывают по достаточно гладкой внутренней стенке прямо в жидкость и перевариваются в ней. Таким образом растение получает для своей жизнедеятельности все необходимые макро- и микроэлементы.</string>
    <string name="rosianka_description">Среди растений-хищников росянка справедливо претендует на звание самой яркой и экспрессивной красавицы. Привлекает это растение, прежде всего, необычными текстурами и игрой окрасов. Но механизм питания этого болотного и вполне выносливого чуда столь экзотичен, что о росянках как о растениях, в первую очередь декоративных, очень легко забыть.\n\nРосянки требуют создания особых условий содержания, они достаточно требовательны к влажности, но их проще, чем многих более редких комнатных хищников, выращивать в обычных жилых помещениях. Да и уход за ними очень уж сложным назвать нельзя.</string>
    <string name="sarracenia_description">Эти растения, представляющие собой скрученный лист-ловушку, исходящий из корня, никого не могут оставить равнодушными. Своим силуэтом и расцветкой саррацении напоминают фантастические неземные растения. Мало других экзотов могут посоревноваться с сарраценией в экстравагантности. Эти многолетние, корневищные, болотные травы принадлежат к числу самых крупных насекомоядных растений.\n\nРод Саррацения является эндемиком (с ограниченным местом проживания) для Атлантическо-Северо-Американской флористической области. Один из видов, саррацения пурпурная (Sarracenia purpurea), был завезен в болота Центральной Ирландии, где хорошо аклиматизировался.\n\nБольшие, яркие, цветки с двойным околоцветником выносятся над кувшинчатыми листьями на крепком безлистном цветоносе по одному (редко по 2-3) на каждую особь. Для саррацении характерен гигантский, необычной формы, зонтиковидный столбик с небольшими рыльцами под верхушкой каждых из лопастей; особенно он велик у саррацении пурпурной.</string>
    <string name="puzirchatka_description">Пузырчатка обыкновенная – многолетнее растение, обитающее в воде. Она абсолютно не похожа на других речных и болотных растительных жителей методом добычи пищи, способами размножения и другими характеристиками. Ею интересовались многие знаменитые естествоиспытатели, в том числе и Дарвин.\n\nДревнейшее водное растение живет в заиленных водоемах всего мира (нет ее разве что в Антарктиде и на нескольких островах Океании), образуя густые заросли и питаясь мельчайшими организмами. Красиво цветущая и декоративная водоросль – любимица многих аквариумистов, тем более что с ее плотоядными склонностями вполне можно справиться.</string>
    <string name="darlingtonia_description">Хищное растение дарлингтония, листья которой напоминают приготовившуюся к нападению кобру с распущенным капюшоном, считается редким родом семейства саррацениевых и тщательно охраняется согласно Вашингтонской Конвенции.\n\nОбласть распространения дарлингтонии в дикой природе очень ограничена — это относительно небольшой район между американскими штатами Орегон и Калифорния. В зависимости от благоприятствования внешних факторов, листья дарлингтонии вырастают до метра в длину, а невзрачные цветки этого растения, могут достигать в диаметре 6 см.</string>

    <string name="next_day">Следующий день</string>
    <string name="add_button">Добавить</string>


</resources>